--- a/DCGAN_face_generation.ipynb
+++ b/DCGAN_face_generation.ipynb
@@ -56,6 +56,37 @@
     "\n",
     "%matplotlib inline"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualize the CelebA Data\n",
+    "\n",
+    "The [CelebA](http://mmlab.ie.cuhk.edu.hk/projects/CelebA.html) dataset contains over 200,000 celebrity images with annotations. Since you're going to be generating faces, you won't need the annotations, you'll only need the images. Note that these are color images with [3 color channels (RGB)](https://en.wikipedia.org/wiki/Channel_(digital_image)#RGB_Images) each.\n",
+    "\n",
+    "### Pre-process and Load the Data\n",
+    "\n",
+    "Since the project's main focus is on building the GANs, we've done *some* of the pre-processing for you. Each of the CelebA images has been cropped to remove parts of the image that don't include a face, then resized down to 64x64x3 NumPy images. This *pre-processed* dataset is a smaller subset of the very large CelebA data.\n",
+    "\n",
+    "> There are a few other steps that you'll need to **transform** this data and create a **DataLoader**.\n",
+    "\n",
+    "#### Exercise: Complete the following `get_dataloader` function, such that it satisfies these requirements:\n",
+    "\n",
+    "* Your images should be square, Tensor images of size `image_size x image_size` in the x and y dimension.\n",
+    "* Your function should return a DataLoader that shuffles and batches these Tensor images.\n",
+    "\n",
+    "#### ImageFolder\n",
+    "\n",
+    "To create a dataset given a directory of images, it's recommended that you use PyTorch's [ImageFolder](https://pytorch.org/docs/stable/torchvision/datasets.html#imagefolder) wrapper, with a root directory `processed_celeba_small/` and data transformation passed in."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
