--- a/DCGAN_face_generation.ipynb
+++ b/DCGAN_face_generation.ipynb
@@ -86,7 +86,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# necessary imports\n",
+    "import torch\n",
+    "from torchvision import datasets\n",
+    "from torchvision import transforms"
+   ]
   }
  ],
  "metadata": {
