--- a/DCGAN_face_generation.ipynb
+++ b/DCGAN_face_generation.ipynb
@@ -92,6 +92,29 @@
     "from torchvision import datasets\n",
     "from torchvision import transforms"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_dataloader(batch_size, image_size, data_dir='processed_celeba_small/'):\n",
+    "    \"\"\"\n",
+    "    Batch the neural network data using DataLoader\n",
+    "    :param batch_size: The size of each batch; the number of images in a batch\n",
+    "    :param img_size: The square size of the image data (x, y)\n",
+    "    :param data_dir: Directory where image data is located\n",
+    "    :return: DataLoader with batched data\n",
+    "    \"\"\"\n",
+    "    img2tensor= transforms.Compose([transforms.Resize(image_size),\n",
+    "                                   transforms.ToTensor()])\n",
+    "    dataset= datasets.ImageFolder(data_dir, transform=img2tensor)\n",
+    "    \n",
+    "    dataloader= torch.utils.data.DataLoader(dataset, batch_size= batch_size, shuffle= True)\n",
+    "    \n",
+    "    return dataloader\n"
+   ]
   }
  ],
  "metadata": {
