--- a/DCGAN_face_generation.ipynb
+++ b/DCGAN_face_generation.ipynb
@@ -159,6 +159,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, you can view some images! You should seen square images of somewhat-centered faces.\n",
+    "\n",
+    "Note: You'll need to convert the Tensor images into a NumPy type and transpose the dimensions to correctly display an image, suggested `imshow` code is below, but it may not be perfect."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# helper display function\n",
+    "def imshow(img):\n",
+    "    npimg = img.numpy()\n",
+    "    plt.imshow(np.transpose(npimg, (1, 2, 0)))\n",
+    "\n",
+    "\"\"\"\n",
+    "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
+    "\"\"\"\n",
+    "# obtain one batch of training images\n",
+    "dataiter = iter(celeba_train_loader)\n",
+    "images, _ = dataiter.next() # _ for no labels\n",
+    "\n",
+    "# plot the images in the batch, along with the corresponding labels\n",
+    "fig = plt.figure(figsize=(20, 4))\n",
+    "plot_size=16\n",
+    "for idx in np.arange(plot_size):\n",
+    "    ax = fig.add_subplot(2, plot_size//2, idx+1, xticks=[], yticks=[])\n",
+    "    imshow(images[idx])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
