--- a/DCGAN_face_generation.ipynb
+++ b/DCGAN_face_generation.ipynb
@@ -194,6 +194,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercise: Pre-process your image data and scale it to a pixel range of -1 to 1\n",
+    "\n",
+    "You need to do a bit of pre-processing; you know that the output of a `tanh` activated generator will contain pixel values in a range from -1 to 1, and so, we need to rescale our training images to a range of -1 to 1. (Right now, they are in a range from 0-1.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Complete the scale function\n",
+    "def scale(x, feature_range=(-1, 1)):\n",
+    "    ''' Scale takes in an image x and returns that image, scaled\n",
+    "       with a feature_range of pixel values from -1 to 1. \n",
+    "       This function assumes that the input x is already scaled from 0-1.'''\n",
+    "    # assume x is scaled to (0, 1)\n",
+    "    # scale to feature_range and return scaled x\n",
+    "    low= feature_range[0]\n",
+    "    high= feature_range[1]\n",
+    "    x= x * ( high - low) + low\n",
+    "    return x"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
