--- a/DCGAN_face_generation.ipynb
+++ b/DCGAN_face_generation.ipynb
@@ -226,7 +226,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
+    "\"\"\"\n",
+    "# check scaled range\n",
+    "# should be close to -1 to 1\n",
+    "img = images[0]\n",
+    "scaled_img = scale(img)\n",
+    "\n",
+    "print('Min: ', scaled_img.min())\n",
+    "print('Max: ', scaled_img.max())"
+   ]
   }
  ],
  "metadata": {
