--- a/DCGAN_face_generation.ipynb
+++ b/DCGAN_face_generation.ipynb
@@ -238,6 +238,31 @@
     "print('Min: ', scaled_img.min())\n",
     "print('Max: ', scaled_img.max())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Define the Model\n",
+    "\n",
+    "A GAN is comprised of two adversarial networks, a discriminator and a generator.\n",
+    "\n",
+    "## Discriminator\n",
+    "\n",
+    "Your first task will be to define the discriminator. This is a convolutional classifier like you've built before, only without any maxpooling layers. To deal with this complex data, it's suggested you use a deep network with **normalization**. You are also allowed to create any helper functions that may be useful.\n",
+    "\n",
+    "#### Exercise: Complete the Discriminator class\n",
+    "* The inputs to the discriminator are 32x32x3 tensor images\n",
+    "* The output should be a single value that will indicate whether a given image is real or fake"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
