--- a/DCGAN_face_generation.ipynb
+++ b/DCGAN_face_generation.ipynb
@@ -262,7 +262,69 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dis_conv(in_depth, out_depth, kernel_size, stride=2, padding=1, batch_normalization= True):\n",
+    "    layers= []\n",
+    "    conv_layer= nn.Conv2d(in_depth, out_depth, kernel_size, stride, padding)\n",
+    "    layers.append(conv_layer)\n",
+    "    if batch_normalization:\n",
+    "        batch_norm= nn.BatchNorm2d(out_depth)\n",
+    "        layers.append(batch_norm)\n",
+    "    \n",
+    "    return nn.Sequential(*layers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Discriminator(nn.Module):\n",
+    "\n",
+    "    def __init__(self, conv_dim):\n",
+    "        \"\"\"\n",
+    "        Initialize the Discriminator Module\n",
+    "        :param conv_dim: The depth of the first convolutional layer\n",
+    "        \"\"\"\n",
+    "        super(Discriminator, self).__init__()\n",
+    "        self.conv1= dis_conv(3, conv_dim, kernel_size=4, stride=2, padding=1, batch_normalization= False)\n",
+    "        self.conv2= dis_conv(conv_dim, conv_dim*2, kernel_size=4, stride=2, padding=1, batch_normalization= True)\n",
+    "        self.conv3= dis_conv(conv_dim*2, conv_dim*4, kernel_size=4, stride=2, padding=1, batch_normalization= True)\n",
+    "        self.conv4= dis_conv(conv_dim*4, conv_dim*8, kernel_size=4, stride=2, padding=1, batch_normalization= True)\n",
+    "        self.conv5= dis_conv(conv_dim*8, 1, kernel_size=2, stride=1, padding=0, batch_normalization= False)\n",
+    "        \n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        \"\"\"\n",
+    "        Forward propagation of the neural network\n",
+    "        :param x: The input to the neural network     \n",
+    "        :return: Discriminator logits; the output of the neural network\n",
+    "        \"\"\"\n",
+    "        x= F.leaky_relu(self.conv1(x))\n",
+    "        x= F.leaky_relu(self.conv2(x))\n",
+    "        x= F.leaky_relu(self.conv3(x))\n",
+    "        x= F.leaky_relu(self.conv4(x))\n",
+    "        x= self.conv5(x)\n",
+    "        x= x.view(-1,1)\n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
+    "\"\"\"\n",
+    "tests.test_discriminator(Discriminator)"
+   ]
   }
  ],
  "metadata": {
