--- a/DCGAN_face_generation.ipynb
+++ b/DCGAN_face_generation.ipynb
@@ -325,6 +325,41 @@
     "\"\"\"\n",
     "tests.test_discriminator(Discriminator)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generator\n",
+    "\n",
+    "The generator should upsample an input and generate a *new* image of the same size as our training data `32x32x3`. This should be mostly transpose convolutional layers with normalization applied to the outputs.\n",
+    "\n",
+    "#### Exercise: Complete the Generator class\n",
+    "* The inputs to the generator are vectors of some length `z_size`\n",
+    "* The output should be a image of shape `32x32x3`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def deconv(in_depth, out_depth, kernel, stride=2, padding=1, batch_normalization= True):\n",
+    "    layers= []\n",
+    "    deconv= nn.ConvTranspose2d(in_depth, out_depth, kernel_size=kernel, stride= stride, padding= padding)\n",
+    "    layers.append(deconv)\n",
+    "    if batch_normalization:\n",
+    "        layers.append(nn.BatchNorm2d(out_depth))\n",
+    "    return nn.Sequential(*layers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
