--- a/DCGAN_face_generation.ipynb
+++ b/DCGAN_face_generation.ipynb
@@ -359,6 +359,111 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class Generator(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, z_size, conv_dim):\n",
+    "        \"\"\"\n",
+    "        Initialize the Generator Module\n",
+    "        :param z_size: The length of the input latent vector, z\n",
+    "        :param conv_dim: The depth of the inputs to the *last* transpose convolutional layer\n",
+    "        \"\"\"\n",
+    "        super(Generator, self).__init__()\n",
+    "        self.z_size= z_size\n",
+    "        self.conv_dim= conv_dim\n",
+    "        \n",
+    "        self.fc= nn.Linear(z_size, self.conv_dim*8 * 2 * 2)\n",
+    "        #self.deconv1= deconv(conv_dim*16, conv_dim*8, kernel=2, stride= 2, padding= 0, batch_normalization=True)\n",
+    "        self.deconv1= deconv(conv_dim*8, conv_dim*4, kernel=2, stride= 2, padding= 0, batch_normalization=True)\n",
+    "        self.deconv2= deconv(conv_dim*4, conv_dim*2, kernel=2, stride= 2, padding= 0, batch_normalization=True)\n",
+    "        self.deconv3= deconv(conv_dim*2, conv_dim, kernel=4, stride= 2, padding= 1, batch_normalization=True)\n",
+    "        self.deconv4= deconv(conv_dim, 3, kernel=4, stride= 2, padding= 1, batch_normalization=False)\n",
+    "\n",
+    "        # complete init function\n",
+    "        \n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        \"\"\"\n",
+    "        Forward propagation of the neural network\n",
+    "        :param x: The input to the neural network     \n",
+    "        :return: A 32x32x3 Tensor image as output\n",
+    "        \"\"\"\n",
+    "        # define feedforward behavior\n",
+    "        noise= x.view(-1, self.z_size)\n",
+    "        batch_size= noise.shape[0]\n",
+    "        fc_out= self.fc(noise)\n",
+    "        fc_out= fc_out.view(batch_size, self.conv_dim*8, 2, 2)\n",
+    "        deconv1_out= F.leaky_relu(self.deconv1(fc_out))\n",
+    "        deconv2_out= F.leaky_relu(self.deconv2(deconv1_out))\n",
+    "        deconv3_out= F.leaky_relu(self.deconv3(deconv2_out))\n",
+    "        deconv4_out= torch.tanh(self.deconv4(deconv3_out))\n",
+    "        #deconv5_out= F.leaky_relu(self.deconv5(deconv4_out))\n",
+    "        \n",
+    "        return deconv4_out\n",
+    "\n",
+    "\"\"\"\n",
+    "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
+    "\"\"\"\n",
+    "tests.test_generator(Generator)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialize the weights of your networks\n",
+    "\n",
+    "To help your models converge, you should initialize the weights of the convolutional and linear layers in your model. From reading the [original DCGAN paper](https://arxiv.org/pdf/1511.06434.pdf), they say:\n",
+    "> All weights were initialized from a zero-centered Normal distribution with standard deviation 0.02.\n",
+    "\n",
+    "So, your next task will be to define a weight initialization function that does just this!\n",
+    "\n",
+    "You can refer back to the lesson on weight initialization or even consult existing model code, such as that from [the `networks.py` file in CycleGAN Github repository](https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix/blob/master/models/networks.py) to help you complete this function.\n",
+    "\n",
+    "#### Exercise: Complete the weight initialization function\n",
+    "\n",
+    "* This should initialize only **convolutional** and **linear** layers\n",
+    "* Initialize the weights to a normal distribution, centered around 0, with a standard deviation of 0.02.\n",
+    "* The bias terms, if they exist, may be left alone or set to 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weights_init_normal(m):\n",
+    "    \"\"\"\n",
+    "    Applies initial weights to certain layers in a model .\n",
+    "    The weights are taken from a normal distribution \n",
+    "    with mean = 0, std dev = 0.02.\n",
+    "    :param m: A module or layer in a network    \n",
+    "    \"\"\"\n",
+    "    # classname will be something like:\n",
+    "    # `Conv`, `BatchNorm2d`, `Linear`, etc.\n",
+    "    classname = m.__class__.__name__\n",
+    "    if classname== 'Conv2d':\n",
+    "        m.weight.data.normal_(0.0, 0.02)\n",
+    "    \n",
+    "    # TODO: Apply initial weights to convolutional and linear layers\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build complete network\n",
+    "\n",
+    "Define your models' hyperparameters and instantiate the discriminator and generator from the classes defined above. Make sure you've passed in the correct input arguments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
