--- a/DCGAN_face_generation.ipynb
+++ b/DCGAN_face_generation.ipynb
@@ -464,6 +464,99 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
+    "\"\"\"\n",
+    "def build_network(d_conv_dim, g_conv_dim, z_size):\n",
+    "    # define discriminator and generator\n",
+    "    D = Discriminator(d_conv_dim)\n",
+    "    G = Generator(z_size=z_size, conv_dim=g_conv_dim)\n",
+    "\n",
+    "    # initialize model weights\n",
+    "    D.apply(weights_init_normal)\n",
+    "    G.apply(weights_init_normal)\n",
+    "\n",
+    "    print(D)\n",
+    "    print()\n",
+    "    print(G)\n",
+    "    \n",
+    "    return D, G\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define model hyperparams\n",
+    "d_conv_dim = 32\n",
+    "g_conv_dim = 256\n",
+    "z_size = 50\n",
+    "\n",
+    "\"\"\"\n",
+    "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
+    "\"\"\"\n",
+    "D, G = build_network(d_conv_dim, g_conv_dim, z_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G.load_state_dict(torch.load(\"./SavedModels/genarator_9.pt\"))\n",
+    "D.load_state_dict(torch.load(\"./SavedModels/discriminator_9.pt\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training on GPU\n",
+    "\n",
+    "Check if you can train on GPU. Here, we'll set this as a boolean variable `train_on_gpu`. Later, you'll be responsible for making sure that \n",
+    ">* Models,\n",
+    "* Model inputs, and\n",
+    "* Loss function arguments\n",
+    "\n",
+    "Are moved to GPU, where appropriate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No GPU found. Please use a GPU to train your neural network.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "DON'T MODIFY ANYTHING IN THIS CELL\n",
+    "\"\"\"\n",
+    "import torch\n",
+    "\n",
+    "# Check for a GPU\n",
+    "train_on_gpu = torch.cuda.is_available()\n",
+    "if not train_on_gpu:\n",
+    "    print('No GPU found. Please use a GPU to train your neural network.')\n",
+    "else:\n",
+    "    print('Training on GPU!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
