--- a/dlnd_face_generation.ipynb
+++ b/dlnd_face_generation.ipynb
@@ -28,6 +28,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fake face generation\n",
+    "I am doing this project as part of Udacity Nanodegree. Here I am producing fake faces using [GAN](https://en.wikipedia.org/wiki/Generative_adversarial_network) based on a filtered dataset. <br>\n",
+    "<br>\n",
+    "### About the Dataset\n",
+    "The dataset is corped to 32x32 image of face only, the surroundings of the picture is discarded. The training data is not included in this repository.\n",
+    "\n",
+    "### About the Notebook and Training\n",
+    "The GAN was not trained on my personal laptop. It is not that powerfull to handel the workload. So I have trained this in Udacity's GPU Environment.\n",
+    "\n",
+    "### About the files\n",
+    "_dlnd_face_generation.ipynb_ - is the notebook where everything is shown <br>\n",
+    "_dlnd_face_generation.html_ - is the same as notebook only it is in html format<br>\n",
+    "_problem_unittests.py_ - Consists some checks for proper implementation by Udacity<br> \n",
+    "_assets__ - "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
